<resources>
    <string name="app_name">PDI-Check</string>
    <string name="wuling">五菱</string>
    <string name="model_name">五菱PDI</string>
    <string name="wuling_co">上汽通用五菱</string>


    <string name="main_home">主页</string>
    <string name="main_report">报告</string>
    <string name="mine_title">我的</string>


    <string name="editPwdHint">请输入密码</string>
    <string name="old_pwd">请输入旧密码</string>
    <string name="new_pwd">请输入新密码</string>

    <!-- 操作 -->
    <string name="ok">确认</string>
    <string name="define">确定</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="delete">删除</string>
    <string name="next">下一步</string>
    <string name="back">返回</string>
    <string name="stop">暂停</string>
    <string name="start">开始</string>
    <string name="install">安装</string>
    <string name="retry">重试</string>
    <string name="update">更新</string>
    <string name="commit">提交</string>
    <string name="reset">重设</string>
    <string name="all_choose">全选</string>
    <string name="refresh">刷新</string>
    <string name="jump">跳过</string>
    <string name="close">关闭</string>
    <string name="open">打开</string>
    <string name="free">免费</string>
    <string name="login">登录</string>

    <!--加载过程显示-->
    <string name="selectIn">蓝牙连接中…</string>
    <string name="logining">登录中…</string>
    <string name="update_unzip">安装中…</string>
    <string name="loading">加载中…</string>
    <string name="uploading">上传中…</string>
    <string name="bt_searching">正在搜索附近设备…</string>
    <string name="app_updating">APP新版本更新…</string>
    <string name="vci_updating">固件安装中,请勿操作…</string>

    <!--消极提示-->
    <string name="empty_hint">暂无数据</string>
    <string name="input_null">输入不能为空，请输入！</string>
    <string name="install_error">APP安装失败!</string>
    <string name="serial_rule">序列号不合规则!</string>
    <string name="autovin_fail">自动定位失败!</string>
    <string name="not_vin_hint1">VIN码不能为空</string>
    <string name="not_vin_hint2">VIN码长度有误</string>
    <string name="unuse_vin">无效VIN码</string>
    <string name="download_fail">下载失败</string>
    <string name="user_unwrite">账号未填写</string>
    <string name="pwd_unwrite">密码未填写</string>

    <!--网络-->
    <string name="network_null">当前网络不可用，请检查网络情况</string>
    <string name="network_retry">网络连接异常，请重试!</string>
    <string name="network_timeout">网络连接超时,请重试!</string>

    <!-- 显示用语 -->
    <string name="permission_write_read">您需要授权当前应用的文件读写权限,才能使用该功能</string>
    <string name="permission_location">当前获取蓝牙列表，需要位置权限。</string>
    <string name="service_location">当前获取蓝牙列表，需要打开以下服务：位置服务。</string>
    <string name="setting_product_name">产品名称</string>
    <string name="setting_version">APP版本</string>
    <string name="setting_serial">序列号</string>
    <string name="setting_pwd">密码</string>
    <string name="setting_dynamic_so">显示程序版本</string>
    <string name="setting_firmware_name">固件版本</string>
    <string name="setting_app_version">通讯程序版本</string>
    <string name="update_hint">请确保蓝牙连上VCI</string>
    <string name="brand">品牌</string>
    <string name="carModels">车系/车型</string>
    <string name="year">年款</string>
    <string name="del_hint">是否确定删除？</string>
    <string name="logout_hint">确定退出登录吗？</string>
    <string name="vin">VIN码</string>
    <string name="read_vin">读取VIN码</string>
    <string name="input_17vin">请输入17位VIN码</string>
    <string name="title_vci">固件升级</string>
    <string name="latest_version_of_apk">已是最新版本</string>
    <string name="vci_update_hint">请连接蓝牙进行固件升级</string>
    <string name="current_version">当前版本：</string>
    <string name="new_version">最新版本：</string>
    <string name="version_new">已是最新</string>
    <string name="hello">您好,</string>
    <string name="blue_connect_success">蓝牙连接成功</string>
    <string name="disconnect">断开连接</string>
    <string name="change_pwd">修改密码</string>
    <string name="analyze">分析与改进</string>
    <string name="diag_collect">诊断数据收集</string>
    <string name="diag_size">文件大小：</string>
    <string name="diag_time">诊断时间：</string>
    <string name="diag_path">存储路径：</string>
    <string name="analyse_1">开启后将会自动收集诊断数据，并在诊断结束后生成日志文件。</string>
    <string name="analyse_2">为了帮助我们分析和解决问题，改进产品和服务。当遇到诊断问题时，请将诊断日志反馈给我们。</string>
    <string name="diag_logs">诊断日志</string>
    <string name="bluetooth">蓝牙</string>
    <string name="vciUpdate">固件更新</string>
    <string name="login_success">登录成功</string>
    <string name="tip">提示</string>
    <string name="openBlueTooth">开启蓝牙</string>
    <string name="deviceAvailable">可用设备</string>
    <string name="openBt">请打开蓝牙</string>
    <string name="search_bt_ok">蓝牙搜索完成</string>
    <string name="i_know">我知道了</string>
    <string name="blue_disconnect">未连接</string>
    <string name="blue_connected">已连接</string>
    <string name="blue_connecting">连接中</string>
    <string name="relogin">登录失效，请重新登录</string>
    <string name="use_app">欢迎使用 %s App</string>
    <string name="vci_update_fail">固件升级异常，请重试</string>
    <string name="vci_update_success">固件升级完成</string>
    <string name="input_vin">输入VIN码</string>
    <string name="home_page">首页</string>
    <string name="input_vin_auto1">手动输入17位VIN码自动解析车型</string>
    <string name="input_vin_auto2">手动输入17位VIN码\n自动解析车型</string>
    <string name="choose_car">车型选择</string>
    <string name="choose_car_hint1">通过手动选择车型年款等信息来确认车型</string>
    <string name="choose_car_hint2">通过手动选择车型\n年款等信息来确认车型</string>
    <string name="check_plan">检测计划</string>
    <string name="total_choose">共选择%d/%d项</string>
    <string name="choosed">已选%d/%d</string>
    <string name="car_info">车辆信息</string>
    <string name="confirm_model">确认车型</string>
    <string name="auto_vin">智能定位</string>
    <string name="auto_vin_hint">通过连接VCI盒子自动读取\n车架号，自动解析车型</string>
    <string name="select_model">手动选择车型</string>
    <string name="fast_query">快捷筛选</string>
    <string name="by_result">按检测结果</string>
    <string name="all">全部</string>
    <string name="qualified">合格</string>
    <string name="unqualified">不合格</string>
    <string name="by_status">按上传状态</string>
    <string name="uploaded">已上传</string>
    <string name="upload_fail">上传失败</string>
    <string name="by_model">按车型</string>
    <string name="report_number">报告编号:</string>
    <string name="unload">未上传</string>
    <string name="unload_success">上传成功</string>
    <string name="unload_fail">上传失败</string>
    <string name="about">关于</string>
    <string name="contect_vci">连接VCI</string>
    <string name="trans_mode_hint">运输模式弹窗提示</string>
    <string name="logout">退出登录</string>
    <string name="app_update">APP更新</string>
    <string name="car_check">车辆检测</string>
    <string name="open_pdf">打开PDF</string>
    <string name="check_time">检测时间</string>
    <string name="check_co">检测机构</string>
    <string name="pdi_total_dtc">检测故障总数</string>
    <string name="check_sn">检测设备</string>
    <string name="part_num">零件号：</string>
    <string name="ver_num">版本号：</string>
    <string name="cur_dtc">当前故障码</string>
    <string name="his_dtc">历史故障码</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="query_date">日期范围</string>
    <string name="start_less_end">起始时间不能大于结束时间</string>

    <string name="Day">日</string>
    <string name="Month">月</string>
    <string name="Year">年</string>
    <string name="clear_report_hint">是否清除本地所有报告缓存</string>
    <string name="pdf_creating">正在生成PDF报告...</string>
    <string name="pdf_create_fail">报告生成失败</string>
    <string name="pdf_upload_cancel">报告取消上传</string>
    <string name="pdf_uploading">正在上传PDF报告...</string>
    <string name="pdf_upload_fail">报告上传失败</string>
    <string name="pdf_upload_success">报告上传成功</string>
    <string name="clear_report_title">清除报告缓存</string>
    <string name="clear_report_all">清除所有报告</string>
    <string name="clear_report_keep_month">仅保留本月的报告</string>
    <string name="clear_report_keep_week">仅保留本周的报告</string>
    <string name="clear_report_keep_day">仅保留今天的报告</string>
    <string name="guide">《使用说明》</string>
    <string name="eucleia_info">深圳市欧克勒亚科技有限公司\nCopyright @ 2014-2022 Eucleia.All Rights Reserved.</string>
    <string name="my_device">我的设备</string>
    <string name="is_exit_diag">是否退出诊断</string>
    <string name="retry_upload">重新上传报告</string>
    <string name="retry_upload_hint">刚才报告因网络丢失上传失败\n是否重新上传</string>
    <string name="search">搜索</string>
    <string name="vci_disconnect">VCI未连接</string>
    <string name="vci_disconnect_hint">请检查VCI是否正常工作，\n点击\"确定\"返回首页重新连接</string>
    <string name="clear">清除</string>
    <string name="click_retry"><u>点击重试</u></string>
    <string name="take_vci_hint">本次检测完毕，请拔走VCI诊断接头</string>

</resources>
