<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/dp_15"
    android:layout_marginEnd="@dimen/dp_15"
    android:gravity="center"
    android:orientation="horizontal">

    <com.eucleia.pdicheck.widget.wheelpicker.widgets.WheelYearPicker
        android:id="@+id/wheel_date_picker_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/wheel_date_picker_year_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/Year"
        android:textColor="@color/text_second"
        android:textSize="@dimen/sp_11" />

    <com.eucleia.pdicheck.widget.wheelpicker.widgets.WheelMonthPicker
        android:id="@+id/wheel_date_picker_month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/wheel_date_picker_month_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/Month"
        android:textColor="@color/text_second"
        android:textSize="@dimen/sp_11" />

    <com.eucleia.pdicheck.widget.wheelpicker.widgets.WheelDayPicker
        android:id="@+id/wheel_date_picker_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/wheel_date_picker_day_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/Day"
        android:textColor="@color/text_second"
        android:textSize="@dimen/sp_11" />
</LinearLayout>