<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_head_normal"
            android:id="@+id/head_normal"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/BaseScrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/vci_line" />

        <TextView
            android:id="@+id/my_vci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/text_main"
            android:textSize="@dimen/sp_12"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vci_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/blue_connected"
            android:textColor="@color/main"
            android:textSize="@dimen/sp_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@color/split" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:maxWidth="150dp"
                android:text="@string/setting_serial"
                android:textColor="@color/text_second"
                android:textSize="@dimen/sp_10" />

            <TextView
                android:id="@+id/sn_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:maxWidth="150dp"
                android:textColor="@color/text_second"
                android:textSize="@dimen/sp_10" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/split" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:maxWidth="150dp"
                android:text="@string/setting_pwd"
                android:textColor="@color/text_second"
                android:textSize="@dimen/sp_10" />

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:maxWidth="150dp"
                android:textColor="@color/text_second"
                android:textSize="@dimen/sp_10" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/split" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:maxWidth="150dp"
                android:text="@string/setting_firmware_name"
                android:textColor="@color/text_second"
                android:textSize="@dimen/sp_10" />

            <TextView
                android:id="@+id/firmware_version"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:maxWidth="150dp"
                android:textColor="@color/text_second"
                android:textSize="@dimen/sp_10" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/split" />



        <TextView
            android:id="@+id/disconnect"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/block_mian1"
            android:gravity="center"
            android:text="@string/disconnect"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>

    </LinearLayout>
</layout>